bootstrap/model-server/components/server/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: inference
  annotations:
    openshift.io/display-name: inference
  labels:
    openshift.io/cluster-monitoring: "true"
    argocd.argoproj.io/managed-by: openshift-gitops
