bootstrap/model-server/components/server/service-stress-detection-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: stress-detection-predictor-nodeport
  namespace: inference
  labels:
    component: inference
spec:
  type: NodePort
  selector:
    app: isvc.stress-detection-predictor
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8888
      nodePort: 30888
