bootstrap/model-server/components/server/service-time-to-failure-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: time-to-failure-predictor-nodeport
  namespace: inference
spec:
  type: NodePort
  selector:
    app: isvc.time-to-failure-predictor
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8888
      nodePort: 30889
