bootstrap/model-server/components/server/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: stress-detection-predictor
  namespace: inference
spec:
  to:
    kind: Service
    name: stress-detection-predictor
  port:
    targetPort: 80
#  tls:
#     termination: edge
#     insecureEdgeTerminationPolicy: Redirect
